# elixir-orderly-evm-connector

./: pyproject.toml
examples/: config.ini  delegate_pool.py  delegate_pools.py  examples_websocket_private.py  examples_websocket_public.py  get_account.py  get_history.py  hsm_session.py  orderly_hsm.py  parse_syms.py  setup_account.py
examples/utils/: config.py
orderly_evm_connector/: api.py
orderly_evm_connector/lib/: constants.py  enums.py  hsm.py  utils.py
orderly_evm_connector/rest/: __init__.py  _account.py  _ceffu.py  _delegate_signer.py  _settlement.py  _wallet.py
orderly_evm_connector/websocket/: async_websocket_manager.py  orderly_socket_manager.py  websocket_client.py
orderly_evm_connector/websocket/websocket_api/: __init__.py  _private_stream.py
requirements/: common.txt
