[tool.poetry]
name = "orderly-evm-connector"
version = "0.1.0"
description = "This is a lightweight library that works as a connector to Orderly API and Websocket."
authors = ["Orderly Tech"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
eth-abi = "^4.0.0-b.2"
parsimonious = "^0.9.0"
eth-account = "^0.8.0"
ed25519 = "^1.5"
base58 = "^2.1.1"
requests = "^2.31.0"
websocket_client = "^1.6.2"
pykcs11 = "^1.5.12"
cryptography = "^42.0.5"
aiohttp = "3.*"
web3 = "^6.0.0"
setuptools = "^80.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "orderly_evm_connector",
]
